fixed an issue with the carousel bouncing when switching between images. started re-doing my about me page to make it visually more appealing. just some basic refactorings and slight movements of spacings between elements.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    position: relative;
 }
 h2{
     color: whitesmoke;
@@ -26,22 +27,50 @@ p{
     padding-top: 12px;
 }
 .card{
-    width:50%;
-    background-color: transparent;
-    border-color: transparent;
+    align-items: center;
     color: whitesmoke;
-    text-align: center center;
-    font-size: 3vw;
-    font-size: relative;
+    text-align: center;
+
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
     
 }
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
 .card-body{
     background-color: #343A40;
     border-radius: 30px;
+    align-items: center;
+    text-align: center;
 
 }
 .carousel-inner img{
-    width: 100%;
-    height:100%;
+    width: 50%;
+    height:50%;
 }
-
+.carousel-item{
+    position: relative;
+    text-align: center;
+    justify-items: stretch;
+}
+.home-slide{
+    position: relative;
+    text-align: center;
+    object-position: bottom;
+}
+#abPic{
+    width: 100%;
+    block-size: 20%;
+    flex-shrink: unset;
+}
+.abText{
+    position: absolute; left: 53%;
+    position: relative;
+    height: 250px;
+	width: 40%;
+	min-width: 200px;
+    background: ivory;
+   
+}
+	
